--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-tsc": "^2.0.6"
   },
   "dependencies": {
+    "ant-design-vue": "~4.0.7",
     "animate.css": "^3.5.1",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
@@ -27,6 +28,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue-i18n": "^9.8.0"
   }
 }
