--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "vue-tsc": "^2.0.6"
   },
   "dependencies": {
-    "ant-design-vue": "~4.0.7",
+    "ant-design-vue": "^4.2.6",
     "animate.css": "^3.5.1",
     "axios": "^1.3.2",
     "nprogress": "^0.2.0",
