--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@types/node": "^20.12.12",
     "@types/nprogress": "^0.2.3",
     "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^9.16.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.13.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.17.0",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   },
   "dependencies": {
-    "ant-design-vue": "^4.2.6",
     "animate.css": "^3.5.1",
+    "ant-design-vue": "^4.2.6",
     "axios": "^1.3.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2",
-    "vue-i18n": "^9.8.0"
+    "vue-i18n": "^9.8.0",
+    "vue-router": "^4.3.2"
   }
 }
