--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "cz-custom": "^0.0.2",
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.13.0",
@@ -33,5 +34,13 @@
     "vue": "^3.4.27",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.3.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-custom"
+    },
+    "cz-custom": {
+      "config": ".cz-config.json"
+    }
   }
 }
