--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.17.0",
     "vite": "^5.2.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^2.0.6"
   },
   "dependencies": {
